2011-07-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-epg.el (mime-preview-application/*-signature): Result
	string always terminates with LF.

2011-06-24  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-sign-pgp-nonmime): Renamed from
	`mime-edit-sign-pgp-nomime'.

2011-06-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-epg.el (mime-verify-application/*-signature-internal): New
	function.
	(mime-verify-application/*-signature): Use it.
	(mime-preview-application/*-signature): New function.

	* semi-setup.el (Top): Setup mime-preview-application/*-signature
	for previewing signature entity.

2011-06-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el: Specify file mode and coding.

2011-06-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-transfer-level): Fix wrong docstring.
	(mime-file-types): Set 'name' parameter of Content-Type field and
	'filename' parameter of Content-Disposition field.

2011-06-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-file): Encode a filename when
	FLIM does not support non-ASCII filename.
	(mime-edit-decode-single-part-in-buffer): Keep 'name' parameter of
	Content-Type field.  Unfold and decode it and 'filename' parameter
	of Content-Disposition field.

2010-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-message): Do not hide button when
	first entity is neither text nor multipart.

2010-12-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Keep
	Content-Id field.

2010-12-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-preview-fill-flowed-text-delsp): New
	variable.
	(mime-display-text/plain): Handle "delsp=yes" if
	mime-preview-fill-flowed-text-delsp's value is non-nil.

2010-12-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-get-signers): Widen before calling
	std11-field-body().  Check return value from std11-field-body().
